[package]
name = "samase_scarf"
version = "0.1.0"
authors = ["Markus Heikkinen <ittevien@gmail.com>"]
edition = "2018"

[[bin]]
name = "dump"
required-features = ["binaries"]

[profile.dev]
lto = "no"
codegen-units = 4
opt-level = 2 # Does not worsen compilation times but halves runtime on scarf
# Disabled for faster builds
debug = 0

[profile.test]
# Disabled for faster builds
debug = 0
opt-level = 2

[profile.release]
# Disabled for faster builds
debug = 0
lto = true
overflow-checks = true

[dependencies]
arrayvec = "0.5"
byteorder = "1.1.0"
fxhash = "0.2.1"
lde = { git = "https://github.com/CasualX/lde" }
log = "0.4"
memchr = "2.0"
memmem = "0.1.1"
quick-error = "1.1.0"
smallvec = "1.0"

fern = { version = "0.5", optional = true }
anyhow = { version = "1.0", optional = true }
winapi = { version = "0.3", features = ["d3dcompiler"], optional = true }
scopeguard = { version = "1.1", optional = true }

[dependencies.scarf]
git = "https://github.com/neivv/scarf"
rev = "16d656698ea310b4c6643406bb6e40c81a7e491a"

[dev-dependencies]
fern = "0.5"

[features]
test_assertions = []
x86 = []
binaries = ['fern', 'anyhow', 'winapi', 'scopeguard']
