[package]
name = "samase_scarf"
version = "0.1.0"
authors = ["Markus Heikkinen <ittevien@gmail.com>"]
edition = "2018"

[[bin]]
name = "dump"
required-features = ["binaries"]

[profile.dev]
lto = "no"
codegen-units = 4
opt-level = 2 # Does not worsen compilation times but halves runtime on scarf
# Disabled for faster builds
debug = 0

[profile.test]
# Disabled for faster builds
debug = 0
opt-level = 2

[profile.release]
# Disabled for faster builds
debug = 0
lto = true
overflow-checks = true

[dependencies]
arrayvec = "0.5"
bumpalo = { version = "3.4", features = ["collections"] }
byteorder = "1.1.0"
fxhash = "0.2.1"
lde = { git = "https://github.com/CasualX/lde", rev = "6d8e287075eae41d0c6bae4c2f3a54268e0f8b4a" }
log = "0.4"
memchr = "2.0"
memmem = "0.1.1"

fern = { version = "0.6", optional = true }
anyhow = { version = "1.0", optional = true }
winapi = { version = "0.3", features = ["d3dcompiler"], optional = true }
scopeguard = { version = "1.1", optional = true }

[dependencies.scarf]
git = "https://github.com/neivv/scarf"
rev = "4277063eb6d92337e332aba9bbc40ddcb0c3dca1"

[dev-dependencies]
fern = "0.6"

[features]
test_assertions = []
x86 = []
binaries = ['fern', 'anyhow', 'winapi', 'scopeguard']

[profile.dev.package.bumpalo]
opt-level = 3
overflow-checks = false

[profile.release.package.bumpalo]
overflow-checks = false
